my-fullstack-app/k8s.namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: myspace
  name: myspace
