my-fullstack-app/k8s.api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: localhost:32000/api:0.0.38
          ports:
            - containerPort: 80
      serviceAccountName: build-robot
      imagePullSecrets:
        - name: myregistry
