my-fullstack-app/k8s.mykubetest.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mykubetest
  labels:
    app: mykubetest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mykubetest
  template:
    metadata:
      labels:
        app: mykubetest
    spec:
      containers:
        - name: mykubetest
          image: localhost:32000/mykubetest:0.0.19
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
