my-fullstack-app/k8s.api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: myspace
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
