my-fullstack-app/k8s.mykubetest.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mykubetest
  namespace: myspace
spec:
  selector:
    app: mykubetest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
